--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,8 @@
-# Build and Release Folders
-bin-debug/
-bin-release/
-[Oo]bj/
-[Bb]in/
-
-# Other files and folders
-.settings/
+# files and folders
+.udemy-dl/
+.downloads/
 
 # Executables
-*.swf
-*.air
-*.ipa
-*.apk
+cookies.txt
+courses.txt
 
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
